tests/NormalTests/paczka1/small_fuzzy/49457627.err
Error in line 4: guDMB A839 4,8
Error in line 5: ZHz S449 221,0
Error in line 12: ZHz A833 117,44
Error in line 10: H2ZS S449 26,5
